EditEvent page creation

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -30,7 +30,7 @@
                                     <a class="nav-link" href="#">Meus eventos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Novo enevnto</a>
+                                    <a class="nav-link" href="#">Novo evento</a>
                                 </li>
                                 <li class="nav-item ms-0 ms-lg-5">
                                     <div class="d-lg-flex">
