--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -27,14 +27,14 @@
                         <div class="container-fluid d-flex flex-column flex-lg-row align-items-center justify-content-lg-end mb-2 mb-lg-0">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Meus eventos</a>
+                                    <a class="nav-link" href="/user">Meus eventos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Novo evento</a>
+                                    <a class="nav-link" href="/user/new-event">Novo evento</a>
                                 </li>
                                 <li class="nav-item ms-0 ms-lg-5">
                                     <div class="d-lg-flex">
-                                        <a class="nav-link text-primary" href="#">Kanban tester</a>
+                                        <a class="nav-link text-primary" href="/user/profile">Kanban tester</a>
                                         <a class="nav-link" href="#"><small class="text-danger">Sair</small></a>
                                     </div>
                                 </li>
