--- a/src/views/user/newEvent.mustache
+++ b/src/views/user/newEvent.mustache
@@ -20,7 +20,7 @@
             </div>            
         </div>
         <div class="row form-floating my-3">
-            <textarea class="form-control" id="description" placeholder="Escreva a descrição do evento aqui"></textarea>
+            <textarea class="form-control" id="description" name="description" placeholder="Escreva a descrição do evento aqui"></textarea>
             <label for="description">Descrição</label>
         </div>
         <button class="btn btn-outline-primary m-0">Criar evento</button>
