--- a/src/views/user/editEvent.mustache
+++ b/src/views/user/editEvent.mustache
@@ -4,27 +4,29 @@
     <h2 class="text-primary">Editar Evento</h2>
     <hr/>
 
-    <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
-        <div class="row form-floating">
-            <input class="form-control" type="text" name="title" placeholder="Informe o título do evento" id="title"/>
-            <label for="title">Título</label>
-        </div>
-        <div class="d-flex flex-wrap row my-3">
-            <div class="col-sm-5 p-0 me-auto">
-                <label for="startTime">Início do evento</label>
-                <input class="form-control" type="time" name="startTime" placeholder="Informe o horário de início" id="startTime"/>
-            </div>  
-            <div class="col-sm-5 p-0">
-                <label for="endTime">Fim do evento</label>
-                <input class="form-control" type="time" name="endTime" placeholder="Informe o horário de início" id="endTime"/>
-            </div>            
-        </div>
-        <div class="row form-floating my-3">
-            <textarea class="form-control" id="description" placeholder="Escreva a descrição do evento aqui"></textarea>
-            <label for="description">Descrição</label>
-        </div>
-        <button class="btn btn-outline-primary m-0">editar evento</button>
-    </form>
+    {{#currentEvent}}
+        <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
+            <div class="row form-floating">
+                <input class="form-control" type="text" name="title" value="{{title}}" placeholder="Informe o título do evento" id="title"/>
+                <label for="title">Título</label>
+            </div>
+            <div class="d-flex flex-wrap row my-3">
+                <div class="col-sm-5 p-0 me-auto">
+                    <label for="startTime">Início do evento</label>
+                    <input class="form-control" type="time" name="startTime" value="{{startTime}}" placeholder="Informe o horário de início" id="startTime"/>
+                </div>  
+                <div class="col-sm-5 p-0">
+                    <label for="endTime">Fim do evento</label>
+                    <input class="form-control" type="time" name="endTime" value="{{endTime}}" placeholder="Informe o horário de início" id="endTime"/>
+                </div>            
+            </div>
+            <div class="row form-floating my-3">
+                <textarea class="form-control" id="description" placeholder="Escreva a descrição do evento aqui">{{description}}</textarea>
+                <label for="description">Descrição</label>
+            </div>
+            <button class="btn btn-outline-primary m-0">editar evento</button>
+        </form>
+    {{/currentEvent}}
 </div>
 
 {{>partials/footer}}
