--- a/src/views/user/myEvents.mustache
+++ b/src/views/user/myEvents.mustache
@@ -26,7 +26,7 @@
                         </small>
                     </div>
                     <p class="card-text mt-3 text-black-50">{{description}}</p>
-                    <a href="#" class="card-link">Edit</a>
+                    <a href="/user/edit-event/{{id}}" class="card-link">Edit</a>
                     <a href="#" class="card-link text-danger">Delete</a>
                 </div>
             </div>
