Editing events and adding validations

--- a/src/views/user/editEvent.mustache
+++ b/src/views/user/editEvent.mustache
@@ -21,7 +21,7 @@
                 </div>            
             </div>
             <div class="row form-floating my-3">
-                <textarea class="form-control" id="description" placeholder="Escreva a descrição do evento aqui">{{description}}</textarea>
+                <textarea class="form-control" id="description" name="description" placeholder="Escreva a descrição do evento aqui">{{description}}</textarea>
                 <label for="description">Descrição</label>
             </div>
             <button class="btn btn-outline-primary m-0">editar evento</button>
