--- a/src/views/user/myEvents.mustache
+++ b/src/views/user/myEvents.mustache
@@ -27,7 +27,7 @@
                     </div>
                     <p class="card-text mt-3 text-black-50">{{description}}</p>
                     <a href="/user/edit-event/{{id}}" class="card-link">Edit</a>
-                    <a href="#" class="card-link text-danger">Delete</a>
+                    <a href="/user/delete-event/{{id}}" class="card-link text-danger">Delete</a>
                 </div>
             </div>
         {{/events}}
