Adding flash messages

--- a/src/views/user/myEvents.mustache
+++ b/src/views/user/myEvents.mustache
@@ -4,6 +4,8 @@
     <h2 class="text-primary">Meus Eventos</h2>
     <hr/>
 
+    {{>partials/messages}}
+
     <div class="container-fluid d-flex justify-content-center justify-content-lg-start flex-wrap">
         {{#events}}
             <div class="card" style="width: 18rem;">
