--- a/src/views/register.mustache
+++ b/src/views/register.mustache
@@ -1,6 +1,8 @@
 {{>partials/header}}
 
 <div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
+    {{>partials/messages}}
+    
     <div class="login container m-lg-5 p-5 rounded bg-primary">
         <h1 class="text-center text-light mb-4"> Cadastre-se </h1>
         <form method="POST" class="form-floating">
