--- a/src/views/user/editEvent.mustache
+++ b/src/views/user/editEvent.mustache
@@ -4,6 +4,8 @@
     <h2 class="text-primary">Editar Evento</h2>
     <hr/>
 
+    {{>partials/messages}}
+
     {{#currentEvent}}
         <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
             <div class="row form-floating">
