--- a/src/views/user/profile.mustache
+++ b/src/views/user/profile.mustache
@@ -4,6 +4,8 @@
     <h2 class="text-primary">Perfil do Usuário</h2>
     <hr/>
 
+    {{>partials/messages}}
+
     <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
         <div class="row form-floating">
         <input class="form-control" type="text" name="name" placeholder="Digite o nome do usuário aqui" id="name"/>
