Adding registrion validator

--- a/src/views/register.mustache
+++ b/src/views/register.mustache
@@ -1,7 +1,9 @@
 {{>partials/header}}
 
-<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
+<div class="container-fluid max-width-1200 mx-auto my-2">
     {{>partials/messages}}
+</div>
+<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
     
     <div class="login container m-lg-5 p-5 rounded bg-primary">
         <h1 class="text-center text-light mb-4"> Cadastre-se </h1>
@@ -19,7 +21,7 @@
                 <label for="password">Senha</label>
             </div>
             <div class="form-floating row my-3">
-                <input class="form-control" type="password" id="password-confirm" name="password-confirm" placeholder="Digite sua senha aqui"/>
+                <input class="form-control" type="password" id="password-confirm" name="passwordConfirm" placeholder="Digite sua senha aqui"/>
                 <label for="password-confirm">Confirmar senha</label>
             </div>
 
