--- a/src/views/login.mustache
+++ b/src/views/login.mustache
@@ -1,8 +1,10 @@
 {{>partials/header}}
 
-<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
+<div class="container-fluid max-width-1200 mx-auto my-2">
     {{>partials/messages}}
+</div>
 
+<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
     <div class="login container m-lg-5 p-5 rounded bg-primary">
         <h1 class="text-center text-light mb-4"> Login </h1>
         <form method="POST" class="form-floating">
