--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -19,7 +19,7 @@
                     <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-blok text-align-top">
                     Eventos
                 </a>
-                {{#userIsAuthenticated}}
+                {{#isUserAuthenticated}}
                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -33,15 +33,17 @@
                                     <a class="nav-link" href="/user/new-event">Novo evento</a>
                                 </li>
                                 <li class="nav-item ms-0 ms-lg-5">
+                                {{#user}}
                                     <div class="d-lg-flex">
-                                        <a class="nav-link text-primary" href="/user/profile">Kanban tester</a>
-                                        <a class="nav-link" href="#"><small class="text-danger">Sair</small></a>
+                                        <a class="nav-link text-primary" href="/user/profile">{{name}}</a>
+                                        <a class="nav-link" href="/user/logout"><small class="text-danger">Sair</small></a>
                                     </div>
+                                {{/user}}
                                 </li>
                             </ul>
                         </div>
                     </div>
-                {{/userIsAuthenticated}}
+                {{/isUserAuthenticated}}
             </div>
         </nav>
    </header>
