--- a/src/views/user/profile.mustache
+++ b/src/views/user/profile.mustache
@@ -5,28 +5,32 @@
     <hr/>
 
     {{>partials/messages}}
-
-    <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
-        <div class="row form-floating">
-        <input class="form-control" type="text" name="name" placeholder="Digite o nome do usuário aqui" id="name"/>
-            <label for="name">Nome</label>
-        </div>
-        <div class="row form-floating my-3">
-            <input class="form-control" type="email" name="email" placeholder="Digite seu e-mail aqui" id="email"/>
-            <label for="email">E-mail</label>
-        </div>
-        <div class="d-flex flex-wrap row my-3">
-            <div class="form-floating col-sm-5 p-0 me-auto my-2 my-md-0">
-                <input class="form-control" type="password" name="newPassword" placeholder="Informe a nova senha aqui" id="newPassword"/>
-                <label for="newPassword">Nova senha</label>
-            </div>  
-            <div class="form-floating col-sm-5 p-0 my-2 my-md-0">
-                <label for="confirmPassword">Confirmar senha</label>
-                <input class="form-control" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" id="confirmPassword"/>
-            </div>            
-        </div>
-        <button class="btn btn-outline-primary m-0">Criar evento</button>
-    </form>
+    {{#isUserAuthenticated}}
+        {{#user}}
+            <form method="POST" class="col-md-10 col-lg-8 mx-auto my-5 p-2">
+                <div class="row form-floating">
+                <input class="form-control" type="text" name="name"value="{{name}}" placeholder="Digite o nome do usuário aqui" id="name"/>
+                    <label for="name">Nome</label>
+                </div>
+                <div class="row form-floating my-3">
+                    <input class="form-control" type="email" name="email" value="{{email}}" placeholder="Digite seu e-mail aqui" id="email"/>
+                    <label for="email">E-mail</label>
+                </div>
+                <div class="d-flex flex-wrap row my-3">
+                    <div class="form-floating col-sm-5 p-0 me-auto my-2 my-md-0">
+                        <input class="form-control" type="password" name="password" placeholder="Informe a nova senha aqui" id="newPassword"/>
+                        <label for="newPassword">Nova senha</label>
+                    </div>  
+                    <div class="form-floating col-sm-5 p-0 my-2 my-md-0">
+                        <input class="form-control" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" id="confirmPassword"/>
+                        <label for="confirmPassword">Confirmar senha</label>
+                    </div> 
+                    <small class="text-muted my-2">A senha deve ter no mínimo 4 caracteres e no máximo 8.</small>           
+                </div>
+                <button class="btn btn-outline-primary m-0">Editar perfil</button>
+            </form>
+        {{/user}}
+    {{/isUserAuthenticated}}
 </div>
 
 {{>partials/footer}}
