--- a/src/views/login.mustache
+++ b/src/views/login.mustache
@@ -4,9 +4,9 @@
     {{>partials/messages}}
 </div>
 
-<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
-    <div class="login container m-lg-5 p-5 rounded bg-primary">
-        <h1 class="text-center text-light mb-4"> Login </h1>
+<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto min-height-60">
+    <div class="login container p-5 mt-5 rounded bg-light shadow">
+        <h1 class="text-center text-primary mb-4"> Login </h1>
         <form method="POST" class="form-floating">
             <div class="form-floating row">
                 <input class="form-control" type="email" id="email" name="email" placeholder="Digite seu e-mail aqui"/>
@@ -18,10 +18,10 @@
             </div>
 
 
-            <button class="btn btn-outline-light my-3">Entrar</button>
+            <button class="btn btn-outline-primary my-3">Entrar</button>
 
             <br/>
-            <small class="text-center text-light">Não tem uma conta ainda? Então <a href="/register" class="link-light">cadastre-se<a> agora.</small>
+            <small class="text-center text-primary">Não tem uma conta ainda? Então <a href="/register">cadastre-se<a> agora.</small>
         </form>
     </div>
 </div>
