Changing the registration link color on the login page and adding minimum size on the registration page.

--- a/src/views/login.mustache
+++ b/src/views/login.mustache
@@ -21,7 +21,7 @@
             <button class="btn btn-outline-primary my-3">Entrar</button>
 
             <br/>
-            <small class="text-center text-primary">Não tem uma conta ainda? Então <a href="/register">cadastre-se<a> agora.</small>
+            <small class="text-center text-muted">Não tem uma conta ainda? Então <a href="/register" class="link-primary">cadastre-se<a> agora.</small>
         </form>
     </div>
 </div>
