--- a/src/views/register.mustache
+++ b/src/views/register.mustache
@@ -3,7 +3,7 @@
 <div class="container-fluid max-width-1200 mx-auto my-2">
     {{>partials/messages}}
 </div>
-<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto">
+<div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto min-height-60">
     
     <div class="container-fluid col-md-8 m-lg-5 p-5 rounded bg-light shadow">
         <h1 class="text-center text-primary mb-4"> Cadastre-se </h1>
