Applying regex to login route

--- a/src/views/login.mustache
+++ b/src/views/login.mustache
@@ -7,7 +7,7 @@
 <div class="d-flex align-items-center justify-content-center container max-width-1200 mx-auto min-height-60">
     <div class="login container p-5 mt-5 rounded bg-light shadow">
         <h1 class="text-center text-primary mb-4"> Login </h1>
-        <form method="POST" class="form-floating">
+        <form method="POST" action="/login" class="form-floating">
             <div class="form-floating row">
                 <input class="form-control" type="email" id="email" name="email" placeholder="Digite seu e-mail aqui"/>
                 <label for="email">E-mail</label>
